--- a/styles.css
+++ b/styles.css
@@ -238,9 +238,11 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: space-between;
 }
 
-.app_button-edit,
+.app__button-edit,
 .app_button-more {
-    border: none;
+    border: solid 1px black;
+    padding: .5em;
+    border-radius: 50%;
     cursor: pointer;
     outline: inherit;
     background-color: transparent;
